--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.8"
 
 services:
   barbershop_app:
@@ -6,27 +7,26 @@ services:
     ports:
       - "8081:8080"
     environment:
-      DB_URL: jdbc:mysql://barber_db:3306/barber?createDatabaseIfNotExist=true&serverTimezone=UTC
-      DB_USERNAME: root
-      DB_PASSWORD: Anderson
+      DB_URL: ${DB_URL}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
 
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
+      JWT_SECRET: ${JWT_SECRET}
 
-      JWT_SECRET: mi_super_clave_segura_para_firmar_tokens_2025
+      MAIL_HOST: ${MAIL_HOST}
+      MAIL_PORT: ${MAIL_PORT}
+      MAIL_USERNAME: ${MAIL_USERNAME}
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
 
-      MAIL_HOST: smtp.gmail.com
-      MAIL_PORT: 587
-      MAIL_USERNAME: andersondiazvides05@gmail.com
-      MAIL_PASSWORD: shlkxngaztikdghz
+      APP_EMAIL_FROM_NAME: ${APP_EMAIL_FROM_NAME}
+      APP_EMAIL_FROM: ${APP_EMAIL_FROM}
+      APP_EMAIL_COMPANY: ${APP_EMAIL_COMPANY}
+      APP_EMAIL_SUPPORT: ${APP_EMAIL_SUPPORT}
 
-      APP_EMAIL_FROM_NAME: "Barbershop App"
-      APP_EMAIL_FROM: "noreply@barbershop.com"
-      APP_EMAIL_COMPANY: "Barbershop"
-      APP_EMAIL_SUPPORT: "support@barbershop.com"
-
-      CLOUDINARY_CLOUD_NAME: dorhzs8il
-      CLOUDINARY_API_KEY: 968213555265497
-      CLOUDINARY_API_SECRET: juVOJcRMB76yd33Cyganvm510jw
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
 
     depends_on:
       barber_db:
@@ -37,8 +37,8 @@ services:
     image: mysql:8.0.33
     container_name: barber_db
     environment:
-      MYSQL_ROOT_PASSWORD: Anderson
-      MYSQL_DATABASE: barber
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3307:3306"
     volumes:
@@ -51,5 +51,4 @@ services:
 
 volumes:
   mysql_data:
-
 
