--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,11 +1,25 @@
-FROM eclipse-temurin:17-jdk
-
-ARG JAR_FILE=target/barbershop_app-0.0.1.jar
-
+# Etapa 1: Build
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-COPY ${JAR_FILE} app.jar
+# Copiamos pom.xml y descargamos dependencias
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copiamos el código fuente
+COPY src ./src
+
+# Construimos el .jar
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Runtime
+FROM eclipse-temurin:17-jdk
+WORKDIR /app
+
+# Copiamos el .jar generado desde la etapa de build
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
-
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
