--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
 #spring jpa
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #jwt
 jwt.secret=${JWT_SECRET}
-spring.security.oauth2.resourceserver.jwt.secret-key=${JWT_SECRET}
+
 
 #email
 spring.mail.host=${MAIL_HOST}
