--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,25 +1,26 @@
-# Etapa 1: Build
+# Build
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copiamos pom.xml y descargamos dependencias
+# copiar pom.xml y descargar dependencias
 COPY pom.xml .
 RUN mvn dependency:go-offline -B
 
-# Copiamos el código fuente
+# código fuente
 COPY src ./src
 
-# Construimos el .jar
+# crear el .jar
 RUN mvn clean package -DskipTests
 
-# Etapa 2: Runtime
+# Runtime
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
 
-# Copiamos el .jar generado desde la etapa de build
+# copiar el .jar
 COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Duser.timezone=America/Bogota", "-jar", "app.jar"]
+
 
 
