--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -14,6 +14,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #jwt
 jwt.secret=${JWT_SECRET}
 
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
+
+spring.jackson.time-zone=America/Bogota
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
+
+
+
 
 #email
 spring.mail.host=${MAIL_HOST}
