--- a/project/pom.xml
+++ b/project/pom.xml
@@ -101,7 +101,12 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.8.9</version> <!-- Use the latest compatible version -->
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.10.3</version> <!-- Use the latest version available -->
 		</dependency>
 	</dependencies>
 
