--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -24,17 +24,9 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
 
 
 #email
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+sendgrid.api-key=${SENDGRID_API_KEY}
+sendgrid.from=${SENDGRID_FROM_EMAIL}
 
-app.email.from-name=${APP_EMAIL_FROM_NAME}
-app.email.from=${APP_EMAIL_FROM}
-app.email.company-name=${APP_EMAIL_COMPANY}
-app.email.support=${APP_EMAIL_SUPPORT}
 
 # cloudinary
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
