--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,10 @@ services:
       SPRING_JPA_HIBERNATE_DDL_AUTO: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
       JWT_SECRET: ${JWT_SECRET}
 
-      MAIL_HOST: ${MAIL_HOST}
-      MAIL_PORT: ${MAIL_PORT}
-      MAIL_USERNAME: ${MAIL_USERNAME}
-      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      SENDGRID_API_KEY: ${SENDGRID_API_KEY}
+      SENDGRID_FROM_EMAIL: ${SENDGRID_FROM_EMAIL}
 
-      APP_EMAIL_FROM_NAME: ${APP_EMAIL_FROM_NAME}
-      APP_EMAIL_FROM: ${APP_EMAIL_FROM}
-      APP_EMAIL_COMPANY: ${APP_EMAIL_COMPANY}
-      APP_EMAIL_SUPPORT: ${APP_EMAIL_SUPPORT}
+     
 
       CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
       CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
